--- a/myProject/pom.xml
+++ b/myProject/pom.xml
@@ -191,6 +191,13 @@
 		</dependency>
 		<!-- 라이브러리 추가 -->
 		
+		<!-- 따로 추가 -->
+		<dependency>
+            <groupId>com.oracle.ojdbc</groupId>
+            <artifactId>orai18n</artifactId>
+            <version>19.3.0.0</version>
+        </dependency>
+		
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
