Nutriment들 기능 구현 완 - 홍아현 layout 2 3 width 값 변경

--- a/myProject/src/main/resources/messages/nutrimentValidation.properties
+++ b/myProject/src/main/resources/messages/nutrimentValidation.properties
@@ -1,11 +1,15 @@
 #\uc601\uc591\uc131\ubd84 \ub4f1\ub85d
-NotBlank.foodName=\uc2dd\ud488\uba85\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.foodWeight=\ub2e8\uc704 g\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.kcal=\uce7c\ub85c\ub9ac\ub294 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.fat=\uc9c0\ubc29 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.col=\ucf5c\ub808\uc2a4\ud14c\ub864 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.na=\ub098\ud2b8\ub968 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.carb=\ud0c4\uc218\ud654\ubb3c \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.dietaryFiber=\uc2dd\uc774\uc12c\uc720 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.sugars=\ub2f9 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.protein=\ub2e8\ubc31\uc9c8 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+NotEmpty.foodName=\uc2dd\ud488\uba85\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.foodWeight=\ub2e8\uc704 g\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.(0 \uc774\uc0c1)
+Range.kcal=\uce7c\ub85c\ub9ac\ub294 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.fat=\uc9c0\ubc29 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.col=\ucf5c\ub808\uc2a4\ud14c\ub864 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.na=\ub098\ud2b8\ub968 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.carb=\ud0c4\uc218\ud654\ubb3c \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.dietaryFiber=\uc2dd\uc774\uc12c\uc720 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.sugars=\ub2f9 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.protein=\ub2e8\ubc31\uc9c8 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+
+#\ud0c4\ub2e8\uc9c0 \uacc4\uc0b0\uae30
+NotNull.height=\ud0a4\ub294 \ud544\uc218 \uc785\ub825 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+NotNull.weight=\uccb4\uc911\uc740 \ud544\uc218 \uc785\ub825 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
