--- a/myProject/src/main/resources/messages/nutrimentValidation.properties
+++ b/myProject/src/main/resources/messages/nutrimentValidation.properties
@@ -1,15 +1,11 @@
 #\uc601\uc591\uc131\ubd84 \ub4f1\ub85d
-NotEmpty.foodName=\uc2dd\ud488\uba85\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.foodWeight=\ub2e8\uc704 g\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.(0 \uc774\uc0c1)
-Range.kcal=\uce7c\ub85c\ub9ac\ub294 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.fat=\uc9c0\ubc29 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.col=\ucf5c\ub808\uc2a4\ud14c\ub864 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.na=\ub098\ud2b8\ub968 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.carb=\ud0c4\uc218\ud654\ubb3c \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.dietaryFiber=\uc2dd\uc774\uc12c\uc720 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.sugars=\ub2f9 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-Range.protein=\ub2e8\ubc31\uc9c8 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-
-#\ud0c4\ub2e8\uc9c0 \uacc4\uc0b0\uae30
-NotNull.height=\ud0a4\ub294 \ud544\uc218 \uc785\ub825 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
-NotNull.weight=\uccb4\uc911\uc740 \ud544\uc218 \uc785\ub825 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+NotEmpty.food_name=\uc2dd\ud488\uba85\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_g=\ub2e8\uc704 g\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.(0 \uc774\uc0c1)
+Range.food_kcal=\uce7c\ub85c\ub9ac\ub294 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_fat=\uc9c0\ubc29 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_col=\ucf5c\ub808\uc2a4\ud14c\ub864 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_na=\ub098\ud2b8\ub968 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_carb=\ud0c4\uc218\ud654\ubb3c \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_df=\uc2dd\uc774\uc12c\uc720 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_sugars=\ub2f9 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
+Range.food_protein=\ub2e8\ubc31\uc9c8 \ud568\uc720\ub7c9\uc740 \ud544\uc218 \ud56d\ubaa9\uc785\ub2c8\ub2e4.
